# claude-engineer

./: README.md  cli.py  pyproject.toml  requirements.txt
claude_engineer/: __init__.py  __main__.py  agent.py  config.py
tests/: test_fs_tools.py  test_shell_tool.py
tools/: __init__.py  base.py  fs.py  opus.py  search.py  shell.py
